--- a/MedicalAssistant/App.config
+++ b/MedicalAssistant/App.config
@@ -3,9 +3,12 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="MedicalAssistant.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Patients.mdb;Persist Security Info=True" providerName="System.Data.OleDb" />
+    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=Database/Patients.mdb;Persist Security Info=True" providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -28,6 +31,17 @@
         <assemblyIdentity name="Bunifu.Licensing" publicKeyToken="f89b4760ba7dcb6b" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <MedicalAssistant.Properties.Settings>
+      <setting name="sqConnectionString" serializeAs="String">
+        <value>DataSource=Database\\chatbot.sqlite;Version=3;</value>
+      </setting>
+    </MedicalAssistant.Properties.Settings>
+  </applicationSettings>
 </configuration>
