--- a/MedicalAssistant/Properties/Settings.settings
+++ b/MedicalAssistant/Properties/Settings.settings
@@ -5,10 +5,13 @@
     <Setting Name="PatientsConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Patients.mdb;Persist Security Info=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=Database/Patients.mdb;Persist Security Info=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Patients.mdb;Persist Security Info=True</Value>
+      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=Database/Patients.mdb;Persist Security Info=True</Value>
+    </Setting>
+    <Setting Name="sqConnectionString" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">DataSource=Database\\chatbot.sqlite;Version=3;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
