--- a/MedicalAssistant/MedicalAssistant.csproj
+++ b/MedicalAssistant/MedicalAssistant.csproj
@@ -472,12 +472,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dll\x64\SQLite.Interop.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Dll\x86\SQLite.Interop.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Dll\x86\SQLite.Interop.dll" />
     <EmbeddedResource Include="Sounds\NoInternetArabic.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
