--- a/MedicalAssistant/MedicalAssistant.csproj
+++ b/MedicalAssistant/MedicalAssistant.csproj
@@ -373,6 +373,12 @@
     <Compile Include="DemoSchandeler.Designer.cs">
       <DependentUpon>DemoSchandeler.cs</DependentUpon>
     </Compile>
+    <Compile Include="DemoSchandeler2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DemoSchandeler2.Designer.cs">
+      <DependentUpon>DemoSchandeler2.cs</DependentUpon>
+    </Compile>
     <Compile Include="GradientPanel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -404,6 +410,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DemoSchandeler.resx">
       <DependentUpon>DemoSchandeler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DemoSchandeler2.resx">
+      <DependentUpon>DemoSchandeler2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
