--- a/MedicalAssistant/App.config
+++ b/MedicalAssistant/App.config
@@ -8,7 +8,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString" connectionString="&#xA;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Database/Patients.mdb" providerName="System.Data.OleDb" />
+    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString"
+      connectionString="&#xA;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Database/Patients.mdb"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
