--- a/MedicalAssistant/App.config
+++ b/MedicalAssistant/App.config
@@ -9,7 +9,7 @@
   </configSections>
   <connectionStrings>
     <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString"
-      connectionString="&#xA;Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Database/Patients.mdb"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb"
       providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
