--- a/MedicalAssistant/Properties/Settings.settings
+++ b/MedicalAssistant/Properties/Settings.settings
@@ -8,12 +8,10 @@
     <Setting Name="PatientsConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;
-Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Database/Patients.mdb&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">
-Provider=Microsoft.ACE.OLEDB.12.0;Data Source=Database/Patients.mdb</Value>
+      <Value Profile="(Default)">Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb</Value>
     </Setting>
   </Settings>
 </SettingsFile>
