--- a/MedicalAssistant/App.config
+++ b/MedicalAssistant/App.config
@@ -8,9 +8,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString"
-      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb"
-      providerName="System.Data.OleDb" />
+    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb" providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -36,6 +34,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.113.0" newVersion="1.0.113.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
