--- a/MedicalAssistant/packages.config
+++ b/MedicalAssistant/packages.config
@@ -3,6 +3,7 @@
   <package id="Bunifu.UI.WinForms" version="4.1.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="5.15.3" targetFramework="net472" />
+  <package id="GMap.NET.WindowsForms" version="1.7.1" targetFramework="net472" />
   <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="NAudio.Lame" version="1.1.6" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
