--- a/MedicalAssistant/App.config
+++ b/MedicalAssistant/App.config
@@ -6,9 +6,14 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="MedicalAssistant.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="MedicalAssistant.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb" providerName="System.Data.OleDb" />
+    <add name="MedicalAssistant.Properties.Settings.PatientsConnectionString"
+      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\Database\Patients.mdb"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -48,4 +53,26 @@
       </setting>
     </MedicalAssistant.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <MedicalAssistant.Properties.Settings>
+      <setting name="Call_Tips" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="RealTime_Recognizer" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Call_Schandeler" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Tips_wait" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="Chat_first" serializeAs="String">
+        <value>مرحبا</value>
+      </setting>
+      <setting name="Name_Person" serializeAs="String">
+        <value>صديقي</value>
+      </setting>
+    </MedicalAssistant.Properties.Settings>
+  </userSettings>
 </configuration>
